# Django_blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml
django_blog/: settings.py  urls.py  views.py
django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
django_blog/article/migrations/: 0001_initial.py
django_blog/templates/: about.html  base.html  index.html
django_blog/templates/articles/: create.html  index.html  show.html  update.html
