[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["evg <evg-desktop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
